# apps-tech.flecs.fence

./: manifest.json
.github/workflows/: pull_request.yml
app/: CMakeLists.txt
app/backend/: Cargo.toml  api-spec.yaml  notes  rust-toolchain.toml  users.json
app/backend/src/: config.rs  gen_openapi.rs  lib.rs  main.rs  middleware.rs  model.rs  oauth.rs  persist.rs  rest.rs  router.rs  state.rs  token.rs
app/backend/src/middleware/: role.rs  token.rs
app/backend/src/model/: client.rs  group.rs  password.rs  session.rs  user.rs
app/backend/src/model/group/: id.rs
app/backend/src/oauth/: authorize.rs  endpoint.rs  registrar.rs  routes.rs
app/backend/src/persist/: client_db.rs  group_db.rs  user_db.rs
app/backend/src/persist/client_db/: versioning.rs
app/backend/src/persist/group_db/: default.rs  versioning.rs
app/backend/src/persist/user_db/: versioning.rs
app/backend/src/rest/: auth.rs  clients.rs  login.rs  meta.rs  users.rs
app/backend/src/rest/auth/: meta.rs
app/backend/src/rest/clients/: cid.rs
app/backend/src/rest/meta/: issuer.rs  jwk.rs
app/backend/src/rest/oauth/: authorize.rs  token.rs
app/backend/src/rest/users/: self_.rs  super_admin.rs  uid.rs
app/backend/src/rest/users/uid/: roles.rs
app/backend/src/rest/users/uid/roles/: role.rs
app/backend/src/router/: layer.rs
app/backend/static/ui/: login.html
app/backend/static/ui/css/: main.css
app/backend/templates/: login.html
app/backend/tests/: api_auth.rs  api_client_credentials.rs  api_clients.rs  api_delete_self.rs  api_update_user.rs  api_user_roles.rs  api_users.rs  common.rs
app/frontend/: index.html  package-lock.json  package.json  vitest.config.ts
app/frontend/src/: App.tsx
app/frontend/src/components/: ElevateAppBar.tsx
app/frontend/src/pages/: LoginPage.tsx  OpenSource.tsx
app/frontend/src/styles/: theme.tsx  tokens.tsx
app/frontend/src/whitelabeling/: Logo.tsx  custom-theme.tsx
docker/: Dockerfile
flecsport/: manifest.json
flecsport/instances/000fe4ce/: instance.json
flecsport/instances/000fe4ce/volumes/: flecs-000fe4ce-fence.tar
(+10 files in other folders)
