[package]
name = "user-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
argon2 = { version = "0.5.3", features = ["std", "zeroize"] }
axum = "0.8.4"
cookie = "0.18.1"
oxide-auth = "0.6.1"
oxide-auth-axum = "0.6.0"
rand_core = { version = "0.9.3", features = ["os_rng"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tempfile = "3.21.0"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["fs"] }
url = "2.5.7"
utoipa = { version = "5.4.0", features = ["axum_extras", "debug", "openapi_extensions", "yaml"] }
uuid = { version = "1.18.1", features = ["v4"] }
zeroize = { version = "1.8.1", features = ["derive"] }
async-signal = "0.2"
futures-util = "0.3"

[profile.release-with-debug]
inherits = "release"
debug = true

#[[bin]]
#name = "gen_openapi"
#path = "src/gen_openapi.rs"
